# csvkit

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  CONTRIBUTING.rst  COPYING  Dockerfile  EVIDENCE.md  MANIFEST.in  Makefile  README  README.md  README.rst  README.textile  README_FUZZYJOIN.md  TODO.txt  client_secrets.json  codespell_fixes.txt  csvclean  csvcut  csvdiff  csvgrep  csvgroup  csvjoin  csvjson  csvlook  csvmap  csvsort  csvsql  csvstack  csvstat  csvsummary  csvtest  in2csv  make_data.py  pyproject.toml  (+9 more)
csvkit/: CHANGELOG.rst  CONTRIBUTING.rst  README.rst  __init__.py  cleanup.py  cli.py  convert.py  counterbackport.py  exceptions.py  grep.py  group.py  headers.py  join.py  normalizers.py  py2.py  py3.py  pyproject.toml  script.py  sed.py  sniffer.py  sql.py  table.py  typeinference.py  unicode.py  unicodecsv.py  unicsv.py
csvkit/.github/workflows/: pypi.yml
csvkit/convert/: __init__.py  csvitself.py  dbase.py  dbf.py  fixed.py  geojs.py  js.py  ndjs.py  ods.py  psql.py  utils.py  xls.py  xlsx.py
csvkit/csvkit/: exceptions.py
csvkit/csvkit/utilities/: csvformat.py  csvgrep.py  csvjoin.py  csvlook.py  csvsort.py  csvstat.py
csvkit/docs/: changelog.rst  tutorial.rst
csvkit/docs/scripts/: csvcut.rst  csvformat.rst  csvjoin.rst  csvjson.rst  csvlook.rst  csvpy.rst  csvstat.rst  sql2csv.rst
csvkit/docs/tutorial/: 3_power_tools.rst
csvkit/examples/: bad.csv  blanks.csv  blanks_converted.csv  dummy.xls  dummy_col_shuffled.csv  dummy_col_shuffled_ragged.csv  join_b.csv  join_no_header_row.csv  no_header_row2.csv  sniff_limit.csv  test.sql  test_empty_columns_long_row.csv  test_geojson.json  test_latin1.csv  test_numeric_date_format.csv  test_query.sql  test_skip_lines.xls  testfixed_converted.csv  testfixed_schema_no_inference.csv  testjson_nested_converted.csv  testxls_unicode_converted.csv
csvkit/examples/realdata/: Datagov_FY10_EDU_recp_by_State.csv  FY09_EDU_Recipients_by_State.csv  README.csv  event-notification-rpt-lastmonth.txt
csvkit/extensions/data_sync/: __init__.py  conflict_resolver.py  data_sync.py  incremental_capture.py  schema_mapper.py  version_control.py
csvkit/extensions/distributed_query/: __init__.py  data_sharding.py  distributed_executor.py  distributed_query.py  query_optimizer.py  query_parser.py
csvkit/extensions/privacy_compliance/: __init__.py  privacy_processor.py  sensitive_detector.py
csvkit/extensions/semantic_repair/: __init__.py  data_enhancer.py  error_detector.py  example_data_dict.json  knowledge_base.py  repair_strategy.py  semantic_repair.py
csvkit/features/: AddBom.py
csvkit/man/: csvcut.1  csvgrep.1  in2csv.1
csvkit/tests/: performance.py  utils.py
csvkit/utilities/: csv2tsv.py  csvclean.py  csvcut.py  csvdiff.py  csves.py  csvformat.py  csvfuzzyjoin.py  csvgoog.py  csvgrep.py  csvgroup.py  csvjoin.py  csvjson.py  csvlook.py  csvplot.py  csvpy.py  csvpys.py  csvsed.py  csvsort.py  csvsplit.py  csvsql.py  csvstack.py  csvstat.py  csvtranspose  csvtranspose.py  in2csv.py  sql2csv.py  stack.py
docker/: Dockerfile  (+1 more)
(+234 files in other folders)
