[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "csvkit"
version = "2.2.0"
requires-python = ">=3.10"
authors = [{name = "Christopher Groskopf and James McKinney", email = "chrisgroskopf@gmail.com"}]
description = "A suite of command-line tools for working with CSV, the king of tabular file formats."
readme = "README.rst"
license = {text = "MIT"}
urls = {Homepage = "https://github.com/wireservice/csvkit", Documentation = "https://csvkit.readthedocs.io/en/latest/"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "agate>=1.12.0",
    "agate-excel>=0.4.0",
    "agate-dbf>=0.2.3",
    "agate-sql>=0.7.0",
    "openpyxl",
    "sqlalchemy",
    "xlrd",
]

[project.optional-dependencies]
zstandard = [
    "zstandard",
]
test = [
    "coverage>=4.4.2",
    "pytest",
    "pytest-cov",
]

[project.scripts]
csvclean = "csvkit.utilities.csvclean:launch_new_instance"
csvcut = "csvkit.utilities.csvcut:launch_new_instance"
csvformat = "csvkit.utilities.csvformat:launch_new_instance"
csvgrep = "csvkit.utilities.csvgrep:launch_new_instance"
csvjoin = "csvkit.utilities.csvjoin:launch_new_instance"
csvjson = "csvkit.utilities.csvjson:launch_new_instance"
csvlook = "csvkit.utilities.csvlook:launch_new_instance"
csvpy = "csvkit.utilities.csvpy:launch_new_instance"
csvsort = "csvkit.utilities.csvsort:launch_new_instance"
csvsql = "csvkit.utilities.csvsql:launch_new_instance"
csvstack = "csvkit.utilities.csvstack:launch_new_instance"
csvstat = "csvkit.utilities.csvstat:launch_new_instance"
in2csv = "csvkit.utilities.in2csv:launch_new_instance"
sql2csv = "csvkit.utilities.sql2csv:launch_new_instance"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.data-files]
"share/man/man1" = [
    "man/csvclean.1",
    "man/csvcut.1",
    "man/csvformat.1",
    "man/csvgrep.1",
    "man/csvjoin.1",
    "man/csvjson.1",
    "man/csvlook.1",
    "man/csvpy.1",
    "man/csvsort.1",
    "man/csvsql.1",
    "man/csvstack.1",
    "man/csvstat.1",
    "man/in2csv.1",
    "man/sql2csv.1",
]

[tool.isort]
line_length = 119
